example/istio/gateway/nginx-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-1
  labels:
    app: nginx-1
spec:
  type: ClusterIP
  selector:
    app: nginx-1
  ports:
  - port: 80
    targetPort: 80
    name: http-nginx

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
